<resources>
    <string name="app_name">Translator</string>
    <string name="editChangeLang"><![CDATA[<>]]></string>
    <string name="TranslateMe">Перевести</string>
    <string name="TranslateIt">Введите текст для перевода</string>
    <string name="title_home">Home</string>
    <string name="main">Главная</string>
    <string name="history">История</string>
    <string name="favorites">Избранное</string>
    <string name="title_activity_history">История</string>
    <string name="sourceText">sourceText</string>
    <string name="sourceLang">sourceLang</string>
    <string name="targetText">targetText</string>
    <string name="targetLang">targetLang</string>
    <string name="someError">Ошибка при попытке перевода</string>
    
    <string-array name="LangUI">
        <item>af</item>
        <item>az</item>
        <item>sq</item>
        <item>am</item>
        <item>en</item>
        <item>ar</item>
        <item>hy</item>
        <item>eu</item>
        <item>ba</item>
        <item>be</item>
        <item>bn</item>
        <item>my</item>
        <item>bg</item>
        <item>bs</item>
        <item>cy</item>
        <item>hu</item>
        <item>vi</item>
        <item>ht</item>
        <item>gl</item>
        <item>nl</item>
        <item>mrj</item>
        <item>el</item>
        <item>ka</item>
        <item>gu</item>
        <item>da</item>
        <item>he</item>
        <item>yi</item>
        <item>id</item>
        <item>ga</item>
        <item>is</item>
        <item>es</item>
        <item>it</item>
        <item>kk</item>
        <item>kn</item>
        <item>ca</item>
        <item>ky</item>
        <item>zh</item>
        <item>ko</item>
        <item>xh</item>
        <item>km</item>
        <item>lo</item>
        <item>la</item>
        <item>lv</item>
        <item>lt</item>
        <item>lb</item>
        <item>mk</item>
        <item>mg</item>
        <item>ms</item>
        <item>ml</item>
        <item>mt</item>
        <item>mi</item>
        <item>mr</item>
        <item>mhr</item>
        <item>mn</item>
        <item>de</item>
        <item>ne</item>
        <item>no</item>
        <item>pa</item>
        <item>pap</item>
        <item>fa</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>ceb</item>
        <item>sr</item>
        <item>si</item>
        <item>sk</item>
        <item>sl</item>
        <item>sw</item>
        <item>su</item>
        <item>tl</item>
        <item>tg</item>
        <item>th</item>
        <item>ta</item>
        <item>tt</item>
        <item>te</item>
        <item>tr</item>
        <item>udm</item>
        <item>uz</item>
        <item>uk</item>
        <item>ur</item>
        <item>fi</item>
        <item>fr</item>
        <item>hi</item>
        <item>hr</item>
        <item>cs</item>
        <item>sv</item>
        <item>gd</item>
        <item>eo</item>
        <item>et</item>
        <item>jv</item>
        <item>ja</item>
    </string-array>

    <string-array name="LangCaption">
        <item>Африкаанс</item>
        <item>Азербайджанский</item>
        <item>Албанский</item>
        <item>Амхарский</item>
        <item>Английский</item>
        <item>Арабский</item>
        <item>Армянский</item>
        <item>Баскский</item>
        <item>Башкирский</item>
        <item>Белорусский</item>
        <item>Бенгальский</item>
        <item>Бирманский</item>
        <item>Болгарский</item>
        <item>Боснийский</item>
        <item>Валлийский</item>
        <item>Венгерский</item>
        <item>Вьетнамский</item>
        <item>Гаитянский</item>
        <item>Галисийский</item>
        <item>Голландский</item>
        <item>Горномарийский</item>
        <item>Греческий</item>
        <item>Грузинский</item>
        <item>Гуджарати</item>
        <item>Датский</item>
        <item>Иврит</item>
        <item>Идиш</item>
        <item>Индонезийский</item>
        <item>Ирландский</item>
        <item>Исландский</item>
        <item>Испанский</item>
        <item>Итальянский</item>
        <item>Казахский</item>
        <item>Каннада</item>
        <item>Каталанский</item>
        <item>Киргизский</item>
        <item>Китайский</item>
        <item>Корейский</item>
        <item>Коса</item>
        <item>Кхмерский</item>
        <item>Лаосский</item>
        <item>Латынь</item>
        <item>Латышский</item>
        <item>Литовский</item>
        <item>Люксембургский</item>
        <item>Македонский</item>
        <item>Малагасийский</item>
        <item>Малайский</item>
        <item>Малаялам</item>
        <item>Мальтийский</item>
        <item>Маори</item>
        <item>Маратхи</item>
        <item>Марийский</item>
        <item>Монгольский</item>
        <item>Немецкий</item>
        <item>Непальский</item>
        <item>Норвежский</item>
        <item>Панджаби</item>
        <item>Папьяменто</item>
        <item>Персидский</item>
        <item>Польский</item>
        <item>Португальский</item>
        <item>Румынский</item>
        <item>Русский</item>
        <item>Себуанский</item>
        <item>Сербский</item>
        <item>Сингальский</item>
        <item>Словацкий</item>
        <item>Словенский</item>
        <item>Суахили</item>
        <item>Сунданский</item>
        <item>Тагальский</item>
        <item>Таджикский</item>
        <item>Тайский</item>
        <item>Тамильский</item>
        <item>Татарский</item>
        <item>Телугу</item>
        <item>Турецкий</item>
        <item>Удмуртский</item>
        <item>Узбекский</item>
        <item>Украинский</item>
        <item>Урду</item>
        <item>Финский</item>
        <item>Французский</item>
        <item>Хинди</item>
        <item>Хорватский</item>
        <item>Чешский</item>
        <item>Шведский</item>
        <item>Шотландский (гэльский)</item>
        <item>Эсперанто</item>
        <item>Эстонский</item>
        <item>Яванский</item>
        <item>Японский</item>
    </string-array>
</resources>
