<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/main"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/history"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/favorite"
        android:orderInCategory="100"
        android:title="@string/favorites"
        app:showAsAction="never" />

</menu>